--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -48,12 +48,15 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{% url 'borrowing-list' %}">Borrowing History</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="{% url 'logout'%}?next={{request.path}}">Logout</a></li> 
+                <li><a class="dropdown-item" href="{% url 'logout'%}?next={% url 'index'%}">Logout</a></li> 
               </ul>
             </li>
             {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'register'%}?next={{request.path}}">Sign up</a>
               </li>
             {% endif %}
           </ul>
